# cod-project

./: .clangd  .clinerules  .gitignore  CLAUDE.md  CMakeLists.txt  build-cod.sh  do-build-cod.sh  do-build-on-macos.sh  prepare-macos.sh  prepare-osx.sh  prepare-ubuntu.sh  rebuild-cod.sh  setup-hooks.sh
.codebuddy/.rules/: cod-project.mdc
.cursor/rules/: build.mdc  building.mdc  docing.mdc  langp-pref.mdc  llvm-prj.mdc  mem-region.mdc  testing.mdc
.devcontainer/: Dockerfile  devcontainer.json
.kilocode/: rules
.roo/rules/: 03-build.txt  04-mem-region.txt  building.md  docing.md  execute_command_guidelines.md  langp-pref.md  llvm-prj.md  mem-region.md  testing.md
.trae/rules/: project_rules.md
builtins/pkm/: main.cc
cod/: CMakeLists.txt  clang-repl.cc  cod.cc  cod_cache.cc  cod_workspace.cc  main.cc
codp/: CMakeLists.txt  codp_add.cc  codp_commands.hh  codp_init.cc  codp_rm.cc  codp_solve.cc  codp_utils.cc  main.cc
design/: CodProjectStructureAndPkgMgmt.md  CompileOnDemand.md  ExceptionSafety.md  MemoryRegionAndRegionalTypes.md  YamlConversionsOfRegionalTypes.md  YamlSpecExt.md
hooks/: README.md  pre-commit
include/: cod.hh  cod_cache.hh  codp.hh  codp_manifest.hh  codp_yaml.hh  shilos.hh
include/shilos/: dbmem.hh  dbmr.hh  di.hh  dict.hh  dict_yaml.hh  file_stake.hh  iopd.hh  iops.hh  list.hh  list_yaml.hh  prelude.hh  region.hh  relativ.hh  stake.hh  str.hh  str_yaml.hh  uuid.hh  vector.hh  vector_yaml.hh  yaml.hh
patches/llvm/release/18.x/: 000-link-bundled-libs.patch  010-linux-linking-tweaks.patch  010-macos-linking-tweaks.patch  050-macos-x86-tweaks.patch  090-cmake-bugfix-001.patch  101-modernize-cmake-dep-edges.patch
shilos/: CMakeLists.txt  di.cc  shilos.cc
tests/: CMakeLists.txt  test-utils.sh  timeout_helper.sh
tests/cod/: .gitignore  CMakeLists.txt  run-all.sh  test_cli.sh  test_eval.sh  test_output_utils.hh  test_repl.sh
tests/cod/src/: test_cod_cache.cc  test_cod_cli.cc  test_cod_eval.cc  test_cod_repl.cc  test_cod_workspace.cc
tests/cod/test-data/basic/: CodProject.yaml
tests/cod/test-data/basic/include/: cod_minimal.hh  main.hh
tests/cod/test-data/cli/: CodProject.yaml
tests/cod/test-data/repl/: CodProject.yaml
tests/codp/: run-all.sh
tests/codp/init_add_rm/: run.sh
tests/codp/init_add_rm/expected/: add_local.yaml  add_uuid.yaml  init.yaml  rm_name.yaml  rm_uuid.yaml
tests/codp/local_multi/: expected_manifest.yaml  run.sh
tests/codp/local_multi/data/root/: CodManifest.yaml  CodProject.yaml
tests/codp/local_multi/data/root/depA/: CodProject.yaml
tests/codp/local_multi/data/root/depB/: CodProject.yaml
tests/codp/local_multi/data/root/depC/: CodProject.yaml
tests/codp/local_multi/data/root/dev/depA/: CodProject.yaml
tests/codp/local_multi/data/root/dev/depB/: CodProject.yaml
tests/codp/local_multi/data/root/dev/depC/: CodProject.yaml
tests/codp/local_single/: expected_manifest.yaml  run.sh
tests/codp/local_single/data/root/: CodManifest.yaml  CodProject.yaml
tests/codp/local_single/data/root/dev/depA/: CodProject.yaml
tests/shilos/: CMakeLists.txt  run-all.sh
tests/shilos/src/: showcase_basic_usage.cc  test_deletion_methods.cc  test_memory_regions.cc  test_regional_types.cc  test_yaml_containers.cc  test_yaml_serialization.cc
tests/src/: showcase_basic_usage.cc  simple_api_test.cc  simple_test.cc  test_memory_regions.cc  test_regional_types.cc  test_yaml_containers.cc  test_yaml_serialization.cc
tests/yaml-cmp/: CMakeLists.txt  run-all.sh  simple_nested.yaml  yaml_cmp.cc
tests/yaml-cmp/src/: test_yaml_authoring.cc  yaml_cmp.cc  yaml_comparison.hh
tests/yaml-cmp/test-data/: basic_authoring_expected.yaml  basic_mapping.yaml  basic_mapping_json.yaml  comments_clean.yaml  comments_different.yaml  comments_yaml.yaml  complex_document_expected.yaml  document_constructor_expected.yaml  edge_cases.yaml  map_order_original.yaml  map_order_reordered.yaml  mixed_formats.yaml  multi_root_expected.yaml  nested_json.yaml  nested_map_order_original.yaml  nested_map_order_reordered.yaml  nested_structures_expected.yaml  nested_yaml.yaml  scalar_types_expected.yaml  scalars_json.yaml  scalars_yaml.yaml  sequence_json.yaml  sequence_yaml.yaml  string_lifetime_expected.yaml
tests/yaml-exact/: CMakeLists.txt  run-all.sh
tests/yaml-exact/src/: yaml_exact_test.cc
tests/yaml-exact/test-data/: advanced_constructs.yaml  basic_with_comments.yaml  complex_formatting.yaml  whitespace_edge_cases.yaml
tests/yaml-exc-trace/: .gitignore  CMakeLists.txt  run-all.sh
tests/yaml-exc-trace/src/: dump_debug_info_test.cc  get_source_location_test.cc  yaml_exc_trace_test.cc
tests/yaml-pretty/: CMakeLists.txt  run-all.sh
tests/yaml-pretty/src/: yaml_pretty.cc
tests/yaml-pretty/test-data/: expected_ugly_mixed.txt  expected_ugly_mixed_indent.txt  expected_ugly_nested.txt  expected_ugly_simple.txt  mixed.yaml  ugly_mixed.yaml  ugly_simple.yaml
tests/yaml-pretty/test-data/pretty/: CodProject-full-cmts.yaml  codmanifest.yaml  codproject.yaml  mixed.yaml  mixed_indent.yaml  nested.yaml  simple.yaml
tests/yaml-pretty/test-data/ugly/: CodProject-full-cmts.yaml  codmanifest.yaml  codproject.yaml  mixed.yaml  mixed_indent.yaml  nested.yaml  simple.yaml
tests/yaml-ux/: CMakeLists.txt  run-all.sh
tests/yaml-ux/src/: yaml_ux.cc
tests/yaml-ux/test-data/: alias_errors.yaml  comment_verification.yaml  comments_example.yaml  indentation_error.yaml  invalid_escape.yaml  missing_colon.yaml  simple_comments.yaml  unclosed_string.yaml  valid_example.yaml
